Versao 1.0 index.html

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 
     <div class="section">
       <p class="intro">
-        Introdução
+        A Segunda Guerra Mundial foi um conflito militar global que durou de 1939 a 1945, envolvendo a maioria das nações do mundo — incluindo todas as grandes potências — organizadas em duas alianças militares opostas: os Aliados e o Eixo. Foi a guerra mais abrangente da história, com mais de 100 milhões de militares mobilizados. Em estado de "guerra total", os principais envolvidos dedicaram toda sua capacidade econômica, industrial e científica a serviço dos esforços de guerra, deixando de lado a distinção entre recursos civis e militares. Marcado por um número significante de ataques contra civis, incluindo o Holocausto e a única vez em que armas nucleares foram utilizadas em combate, foi o conflito mais letal da história da humanidade, que resultou na morte de 50-70 milhões de pessoas.
       </p>
 
       <h2>O Contexto Histórico</h2>
       <p class="content">
-       Contexto Histrórico
+       A Segunda Guerra Mundial teve como contexto histórico o período após a Primeira Guerra Mundial, marcado por crises econômicas, políticas e sociais, especialmente na Europa. A ascensão do fascismo na Itália e do nazismo na Alemanha, a expansão territorial e o expansionismo alemão foram fatores cruciais para o início do conflito. A invasão da Polônia pela Alemanha em setembro de 1939, por exemplo, foi o estopim para a guerra. 
       </p>
 
       <h2>Consequências e Impacto</h2>
       <p class="content">
-        Consequências e impaco
+        A Segunda Guerra Mundial foi um evento de grandes consequências, tanto na Europa como globalmente, que resultaram em milhões de mortes, destruição e mudanças políticas e sociais significativas. As principais consequências incluem a derrota das potências do Eixo, o início da Guerra Fria, a criação da Organização das Nações Unidas (ONU) e a descolonização de muitos países. 
       </p>
     </div>
 
@@ -31,7 +31,10 @@
     <div class="section">
       <h2>Segunda Guerra Mundial</h2>
       <p class="content">
-       Texto sobre a segunda guerra.
+       O primeiro dia de setembro de 1939 é geralmente considerado o início da guerra, com a invasão alemã da Polônia; o Reino Unido e a França declararam guerra à Alemanha nazista dois dias depois. Outras datas para o início da guerra incluem o início da Segunda Guerra Sino-Japonesa, em 7 de julho de 1937.
+Outros seguem o historiador britânico A. J. P. Taylor, que considerava que a Guerra Sino-Japonesa e a guerra na Europa e em suas colônias ocorreram de forma simultânea e posteriormente se fundiram em 1941. Este verbete utiliza a data convencional. Outras datas por vezes utilizadas para o início da Segunda Guerra Mundial incluem a invasão italiana da Abissínia em 3 de outubro de 1935. O historiador britânico Antony Beevor vê o início da Segunda Guerra Mundial nas batalhas de Khalkhin Gol, travadas entre o Império do Japão e a União Soviética de maio a setembro de 1939.
+
+Também não existe consenso quanto à data exata do fim da guerra. Tem sido sugerido que a guerra terminou no armistício de 14 de agosto de 1945 (Dia V-J), ao invés da rendição formal do Japão em 2 de setembro de 1945; alguns apontam o fim da guerra no dia 8 de maio de 1945 (Dia V-E). No entanto, o tratado de paz com o Japão não foi assinado até 1951,[10] enquanto o acordo de paz com a Alemanha não foi ratificado até 1990.
       </p>
       <img src="segundaGuerra.png" alt="Grandes Navegações" class="image">
     </div>
